added-theatre-mode-functionality

--- a/Test-enviro/Test2/index.html
+++ b/Test-enviro/Test2/index.html
@@ -10,84 +10,27 @@
   
 </head>
 <body>
-        <div class="wrapper">
-        
-            <div class="navbar">
-                <div class="container">
-                    <p>Lorem, ipsum dolor.</p>
-                </div>
-                <div class="container">
-                    <p>Lorem, ipsum dolor.</p>
-                </div>
-                <div class="container">
-                    <p>Lorem, ipsum dolor.</p>
-                </div>
-            </div>
-            <div class="leftnav">
-                <div class="container"></div>
-                <div class="container"></div>
-                <div class="container"></div>
-                <div class="container"></div>
-                <div class="container"></div>
-                <div class="container"></div>
+    <div class="wrapper">
+    <div class="wrapper-for-video-and-description">
+        <div class="video-container">
+            <video src="../../Dashboard/Uploads/6453d7a798205.mp4" class="myVideo"></video>
+            <div class="controls">
+                <div class="theatre-mode"><p>Toggle theatre-mode</p></div>
             </div>
         </div>
-<div class="block">
-<div class="slide">
-    <li>max</li>
-    <li>maxxxxxx</li>
-    <li>maxxxx</li>
-    <li>maxxxx</li>
-    <li>makk</li>
-    <li>makkk</li>
-    <li>MMAKK</li>
-    <li>mkkkj</li>
-    <li>kjkjk</li>
-    <li>kjkji</li>
-    <li>DFTRRt</li>
-    <li>RDTRD</li>
-    <li>trdrtdt</li>
-    <li>drtrd</li>
-    <li>trdtrd</li>
-    <li>trdtr</li>
-</div>
-        <div class="container-2">
-            
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-            <div class="videos"></div>
-        </div>
+        <div class="description">
+            <div class="describe">
 
-   
+            </div>
+        </div>
     </div>
-
-
+    <div class="recommendations">
+        <div class="vid-container"></div>
+        <div class="vid-container"></div>
+        <div class="vid-container"></div>
+    </div>
+    </div>  
 
 </body>
 </html>
+<script src="index.js"></script>
